--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,10 @@
 	<meta name="theme-color" content="#24292e">
 	<meta name="keywords" content="Github">
 	<meta name="description" content="A display of Github repositories">
-	<link rel="icon" href="images/" />
+    <!-- <link rel="icon" href="images/" /> -->
 	<link rel="stylesheet" href="style.css">
     <title>Repo Display</title>
+    <script type='text/javascript' src='../config.js'></script>
     <script src="script.js"></script>
 </head>
 <body>
@@ -35,7 +36,7 @@
                 <form>
                     <label>
                         <input type="text" placeholder="Search or jump to…" />
-                        <img src="./images/svg/search-key-slash.svg" alt="github icon" width="20" height="20" />
+                        <img src="images/svg/search-key-slash.svg" alt="github icon" width="20" height="20" />
                     </label>
                 </form>
                 <nav>
